Fix netlify config and package.json

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "tailwind-merge": "^3.5.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.15.8",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
