--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,8 @@
 [build]
   command = "npm run build"
-  publish = ".next"
 
 [build.environment]
-  NETLIFY_NEXT_PLUGIN_SKIP = "true"
   NODE_VERSION = "22"
+
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
